[gd_scene load_steps=3 format=3 uid="uid://bme2utk10nxg6"]

[ext_resource type="Script" path="res://UI/Main Menu.gd" id="1_bfd8g"]
[ext_resource type="Texture2D" uid="uid://bgpipvne7ejx4" path="res://Assets/Title.png" id="1_cbcln"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bfd8g")

[node name="Title" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_cbcln")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -243.0
offset_top = 62.0
offset_right = 96.0
offset_bottom = 102.0
scale = Vector2(1.5, 1.5)

[node name="Levels" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Levels"
flat = true

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "       "

[node name="Editor" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Editor
"
flat = true

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "       "

[node name="Import" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Import
"
flat = true

[node name="Label3" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "       "

[node name="Exit" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Exit"
flat = true

[connection signal="pressed" from="HBoxContainer/Levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="HBoxContainer/Editor" to="." method="_on_editor_pressed"]
[connection signal="pressed" from="HBoxContainer/Import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="HBoxContainer/Exit" to="." method="_on_exit_pressed"]
